<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.whut.umrhamster.movieinfo.activity.ReInfoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/ac_reinfo_tb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/themeDarkPurple"
        app:contentInsetStart="0dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical">
            <ImageView
                android:contentDescription="@null"
                android:id="@+id/ac_reinfo_iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_centerVertical="true"
                android:background="?android:selectableItemBackgroundBorderless"
                android:src="@drawable/back"/>
            <TextView
                android:id="@+id/ac_reinfo_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/xiugaixinxi"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@id/ac_reinfo_tb">
        <TextView
            android:id="@+id/ac_reinfo_rl_nicheng_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/nicheng"/>
        <EditText
            android:id="@+id/ac_reinfo_rl_nicheng_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:padding="6dp"
            android:lines="1"
            android:maxLength="20"
            android:textSize="14sp"
            android:background="@drawable/reinfo_et_bg"
            android:layout_below="@id/ac_reinfo_rl_nicheng_tv"/>
        <ImageView
            android:contentDescription="@null"
            android:id="@+id/ac_reinfo_rl_pull_iv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="8dp"
            android:src="@drawable/pull"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ac_reinfo_rl_nicheng_et"/>
        <TableLayout
            android:visibility="gone"
            android:id="@+id/ac_reinfo_tl"
            android:layout_below="@id/ac_reinfo_rl_pull_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <TableRow
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yuanmima"/>
                <EditText
                    android:id="@+id/ac_reinfo_tl_et_yuanmima"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="6dp"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLength="16"
                    android:background="@drawable/reinfo_et_bg"/>
            </TableRow>
            <TableRow
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/xinmima"/>
                <EditText
                    android:id="@+id/ac_reinfo_tl_et_xinmima"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="6dp"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:background="@drawable/reinfo_et_bg"/>
            </TableRow>
            <TableRow
                android:layout_margin="8dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/querenmima_re"/>
                <EditText
                    android:id="@+id/ac_reinfo_tl_et_querenmima"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="6dp"
                    android:textSize="14sp"
                    android:lines="1"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:background="@drawable/reinfo_et_bg"/>
            </TableRow>
        </TableLayout>
        <ImageView
            android:contentDescription="@null"
            android:visibility="gone"
            android:id="@+id/ac_reinfo_rl_shouqi_iv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="8dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ac_reinfo_tl"
            android:src="@drawable/shouqi"/>
        <TextView
            android:id="@+id/ac_reinfo_btn"
            android:layout_below="@id/ac_reinfo_rl_shouqi_iv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="确认修改"
            android:textColor="@android:color/white"
            android:padding="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/reinfo_btn_bg"/>
    </RelativeLayout>

</RelativeLayout>
